Revision history for Perl module 'again'

0.06 2014-05-25
    - Added a SEE ALSO section to the pod
    - Added github repo to pod

0.05 2014-01-29
    - Added strict, warnings and Carp as prereqs in Makefile.PL
    - Moved again.pm into lib/
    - Specified min perl version as 5.6.0

0.04 2013-10-01
    - Added metadata for repository and license
    - use strict and warnings in again.pm (with scoped use of no strict 'refs')

0.03 2013-02-23
    - added section to doc explaining you will need to re-import any
      symbols you imported on first use.
    - reformatted Changes to conform to CPAN::Changes::Spec

0.02 2003-08-07
    - Added /g. again.pm didn't work with module names that have more than
      one set of "::". It looked for Net/Whois::Raw.pm.

0.01 2003-03-06
    - original version; created by h2xs 1.22 with options -AXn again
